[Improvement][headless] Implement Generational ZGC (#2236)